update jarToExecutable.sh